--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "firebase": "^10.13.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.427.0",
     "match-sorter": "^6.3.4",
